[project]
name = ""
version = ""
description = ""
authors = [
    {name = "c-n-c", email = "nilakhya@hotmail.com"},
]
dependencies = [
    "nltk~=3.6",
    "wikipedia~=1.4",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
